--- a/style.css
+++ b/style.css
@@ -116,3 +116,32 @@ nav a {
 .information p {
   color: lightslategray;
 }
+
+.quote {
+  background-color: #E5E7EB;
+}
+
+.quote-text {
+  font-size: 36px;
+  font-weight: 300;
+  font-style: italic;
+  color: #1F2937;
+}
+
+.quote-attribution {
+  font-weight: bold;
+  text-align: right;
+}
+
+footer {
+  background-color: #1F2937;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 0;
+}
+
+footer p {
+  color: #E5E7EB;
+  /* font-size: 18px; */
+}
